:sparkles: Add update account route
